--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
 
 header {
     background-image: url(../img/wall.png);
+    margin-bottom: 50px;
 }
 
 h1 {
@@ -24,9 +25,14 @@ h1 {
 .my-container {
     width: 80%;
     display: flex;
+    justify-content: space-between;
     margin: 0 auto;
     /* DEBUG */
     background-color: grey;
 }
 
 /* Cards */
+.card {
+    width: 480px;
+    background-color: #fff;
+}
