--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,21 +23,21 @@ h1 {
 
 /* Utils */
 .my-container {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     /* DEBUG */
-    background-color: grey;
+    /* background-color: grey; */
 }
 
 #card-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
 /* Cards */
 #card {
-    width: 480px;
+    width: 400px;
     padding: 20px;
     margin-bottom: 50px;
     background-color: #fff;
@@ -45,4 +45,14 @@ h1 {
 
 #card-img {
     width: 100%;
+    margin-bottom: 15px;
+}
+
+#date {
+    font-size: 1.5rem;
+}
+
+#title {
+    font-size: 2.5rem;
+    font-weight: 800;
 }
