--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,15 @@ h1 {
     padding: 20px;
     margin-bottom: 50px;
     background-color: #fff;
+    box-shadow: 0px 5px 5px 0px #000;
+    position: relative;
+}
+
+.pin {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 0;
+    left: 200px;
 }
 
 #card-img {
@@ -49,7 +58,7 @@ h1 {
 }
 
 #date {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 #title {
