--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h1 {
     text-align: center;
 }
 
+
 /* Utils */
 .my-container {
     width: 70%;
@@ -47,7 +48,7 @@ h1 {
     position: absolute;
     transform: translate(-50%, -50%);
     top: 0;
-    left: 200px;
+    left: 50%;
 }
 
 #card-img {
@@ -57,6 +58,7 @@ h1 {
 
 #date {
     font-size: 1.2rem;
+    font-family: "Sometype Mono", monospace;
 }
 
 #title {
