--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,11 @@ h1 {
     flex-wrap: wrap;
 }
 
+/* OVERLAY */
 #overlay {
     position: fixed;
+    display: none;
+    justify-content: center;
     width: 100%;
     height: 100%;
     top: 0;
@@ -46,8 +49,17 @@ h1 {
     cursor: pointer;
 }
 
-.display {
-    display: none;
+#button {
+    background: none;
+    color: rgba(35, 35, 35, 0.787);
+    background-color: rgba(255, 255, 255, 0.859);
+    border: 1px solid black;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    width: 100px;
+    height: 50px;
 }
 
 /* Cards */
