--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,8 @@ h1 {
 
 #button {
     background: none;
-    color: rgba(35, 35, 35, 0.787);
-    background-color: rgba(255, 255, 255, 0.859);
+    color: rgba(35, 35, 35);
+    background-color: rgba(255, 255, 255);
     border: 1px solid black;
     padding: 0;
     font: inherit;
