stilizzata immagine grande e fine esercizio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,28 +38,35 @@ h1 {
     position: fixed;
     display: none;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 1000;
     cursor: pointer;
 }
 
+.img-big {
+    width: 600px;
+}
+
 #button {
+    font-size: 1.2rem;
     background: none;
-    color: rgba(35, 35, 35);
-    background-color: rgba(255, 255, 255);
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 94, 1);
     border: 1px solid black;
-    padding: 0;
-    font: inherit;
+    border-radius: 7px;
     cursor: pointer;
     outline: inherit;
     width: 100px;
     height: 50px;
+    margin-bottom: 50px;
 }
 
 /* Cards */
