--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -15,4 +15,15 @@
     #title {
         font-size: 2.5rem;
     }
+
+    .img-big {
+        width: 300px;
+    }
+
+    #button {
+        font-size: 1rem;
+        width: 80px;
+        height: 40px;
+        margin-bottom: 25px;
+    }
 }
