--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ h1 {
 }
 
 #button {
+    font-family: "Sometype Mono", monospace;
     font-size: 1.2rem;
     background: none;
     color: rgb(255, 255, 255);
